--- a/sllvm/test/Makefile
+++ b/sllvm/test/Makefile
@@ -31,7 +31,7 @@ INCFLAGS=
 
 -include Makefile.local
 
-SIM=foo
+SIM=arith
 
 SSIMFLAGS=
 SSIMFLAGS+=--ram 16K
@@ -126,7 +126,8 @@ SGXFLAGS+=--sgx-transform
 # Sancus examples
 
 #all: fileio.objdump
-all: foo.objdump # There are two tests with a foo module
+#all: foo.objdump # There are two tests with a foo module.objdump
+all: arith.objdump
 
 ##############################################################################
 
@@ -233,6 +234,8 @@ a.out: main.sllvm.msp430.sancus.o
 a.out: enclave1.sllvm.msp430.sancus.o
 a.out: enclave2.sllvm.msp430.sancus.o
 a.out: panic.o
+	ln -f msp430-sllvm-text.x msp430-elf-sllvm-text.x
+	ln -f msp430-sllvm-data.x msp430-elf-sllvm-data.x
 	${MSP430LD} ${MSP430LDFLAGS} $^
 
 a.out.objdump: a.out
@@ -242,6 +245,8 @@ a.out.objdump: a.out
 
 test: sancus.o
 test: test.sllvm.msp430.sancus.o
+	ln -f msp430-sllvm-text.x msp430-elf-sllvm-text.x
+	ln -f msp430-sllvm-data.x msp430-elf-sllvm-data.x
 	${MSP430LD} $^ ${MSP430LDFLAGS} -o $@
 
 test.objdump: test
@@ -252,6 +257,8 @@ test.objdump: test
 test2: sancus.o
 test2: test2.sllvm.msp430.sancus.o
 test2: enclave.sllvm.msp430.sancus.o
+	ln -f msp430-sllvm-text.x msp430-elf-sllvm-text.x
+	ln -f msp430-sllvm-data.x msp430-elf-sllvm-data.x
 	${MSP430LD} $^ ${MSP430LDFLAGS} -o $@
 
 test2.objdump: test2
@@ -261,6 +268,8 @@ test2.objdump: test2
 
 foo: sancus.o
 foo: foo.sllvm.msp430.sancus.o
+	ln -f msp430-sllvm-text.x msp430-elf-sllvm-text.x
+	ln -f msp430-sllvm-data.x msp430-elf-sllvm-data.x
 	${MSP430LD} $^ ${MSP430LDFLAGS} -o $@
 
 foo.objdump: foo
@@ -274,6 +283,8 @@ fileio: MSP430LDFLAGS+=-ldev-fileio
 
 fileio: sancus.o
 fileio: fileio.sllvm.msp430.sancus.o
+	ln -f msp430-sllvm-text.x msp430-elf-sllvm-text.x
+	ln -f msp430-sllvm-data.x msp430-elf-sllvm-data.x
 	${MSP430LD} $^ ${MSP430LDFLAGS} -o $@
 
 fileio.objdump: fileio
@@ -281,8 +292,23 @@ fileio.objdump: fileio
 
 #----------------------------------------------------------------------------
 
+arith: sancus.o
+arith: foo.sllvm.msp430.sancus.o
+arith: bar.sllvm.msp430.sancus.o
+arith: main.sllvm.msp430.sancus.o
+	ln -f msp430-arith-text.x msp430-elf-sllvm-text.x
+	ln -f msp430-arith-data.x msp430-elf-sllvm-data.x
+	${MSP430LD} $^ ${MSP430LDFLAGS} -o $@
+
+arith.objdump: arith
+	${MSP430OBJDUMP} -D $< > $@
+
+#----------------------------------------------------------------------------
+
 hello: sancus.o
 hello: hello.sllvm.msp430.sancus.o
+	ln -f msp430-sllvm-text.x msp430-elf-sllvm-text.x
+	ln -f msp430-sllvm-data.x msp430-elf-sllvm-data.x
 	${MSP430LD} $^ ${MSP430LDFLAGS} -o $@
 
 hello.objdump: hello
@@ -294,6 +320,8 @@ hello2: sancus.o
 hello2: hello.sllvm.msp430.sancus.o
 hello2: enclave4.sllvm.msp430.sancus.o
 hello2: panic.o
+	ln -f msp430-sllvm-text.x msp430-elf-sllvm-text.x
+	ln -f msp430-sllvm-data.x msp430-elf-sllvm-data.x
 	${MSP430LD} ${MSP430LDFLAGS} $^ -lsm-io -o $@
 
 hello2.objdump: hello2
