Make sure that the Sancus examples can be compiled, work in progress

--- a/sllvm/test/Makefile
+++ b/sllvm/test/Makefile
@@ -85,7 +85,7 @@ MSP430LDFLAGS+=-lsm-io
 MSP430LDFLAGS+=-ldev
 MSP430LDFLAGS+=-L/usr/local/share/sancus-compiler/lib/
 MSP430LDFLAGS+=-lsancus-sm-support
-#MSP430LDFLAGS+=-Wl,-gc-sections
+MSP430LDFLAGS+=-Wl,-gc-sections
 #MSP430LDFLAGS+=-lsancus-host-support
 
 LLCFLAGS=
@@ -299,7 +299,11 @@ fileio.objdump: fileio
 
 #----------------------------------------------------------------------------
 
+arith.o: arith.s
+	$(MSP430GCC) ${MSP430GCCFLAGS} -c $<
+
 arith: sancus.o
+arith: arith.o
 arith: foo.sllvm.msp430.sancus.o
 arith: bar.sllvm.msp430.sancus.o
 arith: main.sllvm.msp430.sancus.o
