Generalize test build system

--- a/sancus/test/Makefile
+++ b/sancus/test/Makefile
@@ -1,5 +1,19 @@
-all:
-	make -C hello
+TESTS =
+TESTS += hello
 
-sim:
-	make -C hello sim
+TEST_ALL   = $(TESTS:=.all)
+TEST_SIM   = $(TESTS:=.sim)
+TEST_CLEAN = $(TESTS:=.clean)
+
+all  : $(TEST_ALL)
+sim  : $(TEST_SIM)
+clean: $(TEST_CLEAN)
+
+$(TEST_ALL): %.all:
+	$(MAKE) -C $* all
+
+$(TEST_SIM): %.sim:
+	$(MAKE) -C $* sim
+
+$(TEST_CLEAN): %.clean:
+	$(MAKE) -C $* clean
