Add Sancus transformation options

--- a/test/sancus/Makefile.include
+++ b/test/sancus/Makefile.include
@@ -9,6 +9,7 @@ SANCUS_SIM         = $(SLLVM_INSTALL_DIR)/bin/sancus-sim
 SANCUS_LOAD        = sancus-loader
 
 VENDOR_ID  = 1234
+STACK_SIZE = 128
 RAM_SIZE   = 16K
 ROM_SIZE   = 41K
 FPGA_DEV   = /dev/ttyUSB0
@@ -50,6 +51,8 @@ SANCUS_TRANSFORM_FLAGS =
 SANCUS_TRANSFORM_FLAGS += --load $(SLLVM_INSTALL_DIR)/lib/SLLVM.so
 SANCUS_TRANSFORM_FLAGS += --sancus-transform
 SANCUS_TRANSFORM_FLAGS += --key-size $(SANCUS_SECURITY)
+SANCUS_TRANSFORM_FLAGS += --stack-size $(STACK_SIZE)
+SANCUS_TRANSFORM_FLAGS += --vendor-id 0x$(VENDOR_ID)
 
 LLCFLAGS =
 LLCFLAGS += -O3
