--- a/test/sancus/Makefile
+++ b/test/sancus/Makefile
@@ -29,6 +29,7 @@ $(TEST_CLEAN): %.clean:
 
 NEMDEF =
 NEMDEF += triangle
+NEMDEF += bsl
 
 NEMDEF_ALL   = $(NEMDEF:=.nemdef-all)
 NEMDEF_SIM   = $(NEMDEF:=.nemdef-sim)
