--- a/test/sancus/bsl/Makefile.nemdef
+++ b/test/sancus/bsl/Makefile.nemdef
@@ -1,6 +1,7 @@
 EXE = bsl.nemdef
 
 bsl.ll: CFLAGS += -Os
+#bsl.nemdef.s: LLCFLAGSNEMDEF += -msp430-nemesis-defender-emit-cfg=true
 
 include ../Makefile.include
 
