Add diamond benchmark

--- a/test/sancus/Makefile
+++ b/test/sancus/Makefile
@@ -29,8 +29,11 @@ $(TEST_CLEAN): %.clean:
 
 NEMDEF =
 NEMDEF += triangle
+#NEMDEF += fork
+NEMDEF += diamond
+
 NEMDEF += bsl
-NEMDEF += keypad
+#NEMDEF += keypad
 
 NEMDEF_ALL   = $(NEMDEF:=.nemdef-all)
 NEMDEF_SIM   = $(NEMDEF:=.nemdef-sim)
