--- a/test/sancus/Makefile.include
+++ b/test/sancus/Makefile.include
@@ -58,6 +58,7 @@ LLCFLAGS =
 LLCFLAGS += -O3
 
 LLCFLAGSNEMDEF =
+LLCFLAGSNEMDEF += -O3
 LLCFLAGSNEMDEF += -msp430-nemesis-defender-enable=true
 LLCFLAGSNEMDEF += -verify-machineinstrs
 #LLCFLAGSNEMDEF += -debug-only=msp430-nemesis-defender
