--- a/test/sancus/diamond/Makefile.nemdef
+++ b/test/sancus/diamond/Makefile.nemdef
@@ -1,7 +1,7 @@
 EXE = diamond.nemdef
 
 diamond.ll: CFLAGS += -Os
-diamond.nemdef.s: LLCFLAGSNEMDEF += -msp430-nemesis-defender-emit-cfg=true
+#diamond.nemdef.s: LLCFLAGSNEMDEF += -msp430-nemesis-defender-emit-cfg=true
 
 include ../Makefile.include
 
