Add loop benchmark

--- a/test/sancus/Makefile
+++ b/test/sancus/Makefile
@@ -33,6 +33,7 @@ NEMDEF += triangle
 #NEMDEF += multifork
 NEMDEF += diamond
 NEMDEF += indirect
+NEMDEF += loop
 
 NEMDEF += bsl
 #NEMDEF += keypad Suport "secret return types"
