Add ifthenloop benchmark

--- a/test/sancus/Makefile
+++ b/test/sancus/Makefile
@@ -34,6 +34,7 @@ NEMDEF += triangle
 NEMDEF += diamond
 NEMDEF += indirect
 NEMDEF += loop
+NEMDEF += ifthenloop
 
 NEMDEF += bsl
 #NEMDEF += keypad Suport "secret return types"
