--- a/test/sancus/loop/Makefile.nemdef
+++ b/test/sancus/loop/Makefile.nemdef
@@ -1,8 +1,8 @@
 EXE = loop.nemdef
 
 loop.ll: CFLAGS += -Os
-loop.nemdef.s: LLCFLAGSNEMDEF += -debug-only=msp430-nemesis-defender
-loop.nemdef.s: LLCFLAGSNEMDEF += -msp430-nemesis-defender-emit-cfg=true
+#loop.nemdef.s: LLCFLAGSNEMDEF += -debug-only=msp430-nemesis-defender
+#loop.nemdef.s: LLCFLAGSNEMDEF += -msp430-nemesis-defender-emit-cfg=true
 
 include ../Makefile.include
 
