--- a/test/sancus/call/Makefile.nemdef
+++ b/test/sancus/call/Makefile.nemdef
@@ -2,7 +2,7 @@ EXE = call.nemdef
 
 call.ll: CFLAGS += -Os
 #call.nemdef.s: LLCFLAGSNEMDEF += -debug-only=msp430-nemesis-defender
-call.nemdef.s: LLCFLAGSNEMDEF += -msp430-nemesis-defender-emit-cfg=true
+#call.nemdef.s: LLCFLAGSNEMDEF += -msp430-nemesis-defender-emit-cfg=true
 
 include ../Makefile.include
 
