--- a/test/sancus/mulhi3/Makefile.nemdef
+++ b/test/sancus/mulhi3/Makefile.nemdef
@@ -2,7 +2,7 @@ EXE = mulhi3.nemdef
 
 mulhi3.ll: CFLAGS += -Os
 #mulhi3.nemdef.s: LLCFLAGSNEMDEF += -debug-only=msp430-nemesis-defender
-mulhi3.nemdef.s: LLCFLAGSNEMDEF += -msp430-nemesis-defender-emit-cfg=true
+#mulhi3.nemdef.s: LLCFLAGSNEMDEF += -msp430-nemesis-defender-emit-cfg=true
 
 include ../Makefile.include
 
