--- a/test/sancus/Makefile
+++ b/test/sancus/Makefile
@@ -35,6 +35,7 @@ NEMDEF += diamond
 #NEMDEF += multifork
 NEMDEF += call
 NEMDEF += indirect
+NEMDEF += ifcompound
 NEMDEF += loop
 NEMDEF += ifthenloop
 NEMDEF += ifthenloopif
@@ -48,7 +49,7 @@ NEMDEF += ifthenlooplooptail
 #   o compiler-rt (LLVM): has no support for MSP430
 NEMDEF += mulhi3
 
-# 3) Crytpo primitives
+# 3) Primitives from cryptographic libraries
 #NEMDEF +=
 
 # 4) Sancus applications (inspired on applications from Nemesis paper)
@@ -60,10 +61,12 @@ NEMDEF += bsl
 NEMDEF_ALL   = $(NEMDEF:=.nemdef-all)
 NEMDEF_SIM   = $(NEMDEF:=.nemdef-sim)
 NEMDEF_CLEAN = $(NEMDEF:=.nemdef-clean)
+NEMDEF_FORCE = $(NEMDEF:=.nemdef-force)
 
 nemdef-all  : $(NEMDEF_ALL)
 nemdef-sim  : $(NEMDEF_SIM)
 nemdef-clean: $(NEMDEF_CLEAN)
+nemdef-force: $(NEMDEF_FORCE)
 
 $(NEMDEF_ALL): %.nemdef-all:
 	$(MAKE) -C $* -f Makefile.vulnerable all
@@ -76,3 +79,7 @@ $(NEMDEF_SIM): %.nemdef-sim:
 $(NEMDEF_CLEAN): %.nemdef-clean:
 	$(MAKE) -C $* -f Makefile.vulnerable clean
 	$(MAKE) -C $* -f Makefile.nemdef     clean
+
+$(NEMDEF_FORCE): %.nemdef-force:
+	$(MAKE) $*.nemdef-clean
+	$(MAKE) $*.nemdef-all
