--- a/test/sancus/triangle/Makefile.nemdef
+++ b/test/sancus/triangle/Makefile.nemdef
@@ -1,6 +1,7 @@
 EXE = triangle.nemdef
 
 triangle.ll: CFLAGS += -Os
+#triangle.nemdef.s: LLCFLAGSNEMDEF += -debug-only=msp430-nemesis-defender
 #triangle.nemdef.s: LLCFLAGSNEMDEF += -msp430-nemesis-defender-emit-cfg=true
 
 include ../Makefile.include
