--- a/test/sancus/ifthenlooploop/.gitignore
+++ b/test/sancus/ifthenlooploop/.gitignore
@@ -1,2 +1,12 @@
 ifthenlooploop.vulnerable
+ifthenlooploop.vulnerable.fst
+ifthenlooploop.vulnerable.fst.hier
+ifthenlooploop.vulnerable.sim
+ifthenlooploop.vulnerable.vcdcat
 ifthenlooploop.nemdef
+ifthenlooploop.nemdef.fst
+ifthenlooploop.nemdef.fst.hier
+ifthenlooploop.nemdef.sim
+ifthenlooploop.nemdef.vcdcat
+*-before.dot
+*-after.dot
