--- a/test/sancus/ifthenlooplooptail/.gitignore
+++ b/test/sancus/ifthenlooplooptail/.gitignore
@@ -1,2 +1,12 @@
 ifthenlooplooptail.vulnerable
+ifthenlooplooptail.vulnerable.fst
+ifthenlooplooptail.vulnerable.fst.hier
+ifthenlooplooptail.vulnerable.sim
+ifthenlooplooptail.vulnerable.vcdcat
 ifthenlooplooptail.nemdef
+ifthenlooplooptail.nemdef.fst
+ifthenlooplooptail.nemdef.fst.hier
+ifthenlooplooptail.nemdef.sim
+ifthenlooplooptail.nemdef.vcdcat
+*-before.dot
+*-after.dot
