[Nemdef] Benchmarks, work in progress

--- a/test/sancus/Makefile.include
+++ b/test/sancus/Makefile.include
@@ -173,5 +173,6 @@ clean:
 	$(RM) sim.out
 	$(RM) sim-input.bin
 	$(RM) sim-output.bin
-	$(RM) *-before.dot
-	$(RM) *-after.dot
+	$(RM) *.before.dot
+	$(RM) *.after.dot
+	$(RM) *.experiment*.txt
