[Nemdef] Add support for annotations and interactive mode to postprocessing script

--- a/test/sancus/Makefile.include
+++ b/test/sancus/Makefile.include
@@ -159,6 +159,10 @@ sim: $(EXE).fst
 pp: $(EXE).vcdcat
 	$(PYTHON) $(MAKEFILE_DIR)pp.py $(EXE)
 
+.PHONY: ppi
+ppi: $(EXE).vcdcat
+	$(PYTHON) $(MAKEFILE_DIR)pp.py $(EXE) -mode=interactive
+
 .PHONY: clean
 clean:
 	$(RM) *.ll
